--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ ul{
     color:#ffffff;
 }
 
+.button_1:hover {
+    background: #ddd;
+    color: #e8491d;
+}
+
 .dark{
     padding:15px;
     background:#35424a;
@@ -79,27 +84,6 @@ header a:hover{
     color:#cccccc;
     font-weight:bold;
 }
-
-/* Showcase */
-#showcase{
-    min-height:500px;
-    min-width:1423px;
-    background: url('../yahyeet.png') no-repeat;
-    background-position:center top;
-    text-align:center;
-    color:#FFF8DC;
-}
-
-#showcase h1{
-    margin-top:100px;
-    font-size:55px;
-    margin-bottom:10px;
-}
-
-#showcase p{
-    font-size:20px;
-}
-
 
 /* Newsletter */
 #newsletter{
@@ -225,6 +209,11 @@ footer{
     font-size: 16px;
 }
 
+.button1:hover {
+    background: #ddd;
+    color: #3465AA;
+}
+
 .button2 {
     background-color: #0000FF; /* Blue */
     border: none;
@@ -235,6 +224,11 @@ footer{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.button2:hover {
+    background: #ddd;
+    color: #D2691E;
 }
 
 .button3 {
@@ -249,6 +243,11 @@ footer{
     font-size: 16px;
 }
 
+.button3:hover {
+    background: #ddd;
+    color: #7CB854;
+}    
+
 .button4 {
     background-color: #FFD700; /* Gold */
     border: none;
@@ -259,6 +258,11 @@ footer{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.button4:hover {
+    background: #ddd;
+    color: #0AA275;
 }
 
 .button5 {
@@ -273,6 +277,11 @@ footer{
     font-size: 16px;
 }
 
+.button5:hover {
+    background: #ddd;
+    color: #00A2FF;
+}
+
 .button6 {
     background-color: #2F4F4F; /* Slate Grey */
     border: none;
@@ -283,6 +292,11 @@ footer{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.button6:hover {
+    background: #ddd;
+    color: #000000;
 }
 
 .button7 {
@@ -297,6 +311,11 @@ footer{
     font-size: 16px;
 }
 
+.button7:hover {
+    background: #ddd;
+    color: #4B0082;
+}
+
 .button8 {
     background-color: #48D1CC; /* Medium Turquiose */
     border: none;
@@ -309,6 +328,11 @@ footer{
     font-size: 16px;
 }
 
+.button8:hover {
+    background: #ddd;
+    color: #CD853F;
+}
+
 .button9 {
     background-color: #DDA0DD; /* Plum */
     border: none;
@@ -319,4 +343,9 @@ footer{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.button9:hover {
+    background: #ddd;
+    color: #FFA500;
 }
