--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,38 @@ footer{
     background: #ddd;
     color: #FFA500;
 }
+
+
+.button10 {
+    background-color: #2F4F4F; /* Slate Grey */
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.button10:hover {
+    background: #ddd;
+    color: #E9967A;
+}
+
+.button11 {
+    background-color: #7CFC00; /* Lawn Green */
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.button11:hover {
+    background: #ddd;
+    color: #87CEFA;
+}
