--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,6 @@ footer{
     color: #FFA500;
 }
 
-
 .button10 {
     background-color: #2F4F4F; /* Slate Grey */
     border: none;
@@ -433,5 +432,22 @@ footer{
 
 .button13:hover {
     background: #ddd;
-    color: ##2F4F4F;
+    color: #2F4F4F;
+}
+
+.button14 {
+    background-color: #FFA500; /* Plum */
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.button14:hover {
+    background: #ddd;
+    color: #DDA0DD;
 }
